# leech2

./: .gitignore  .protoc-checksums  CALLBACK_API_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DELTA_MERGING_RULES.md  HISTORY_TRUNCATION.md  Makefile  Makefile.am  POSTGRES_PLAN.md  README.md  RELEASING.md  ROUND_TRIP_TEST_PLAN.md  TERMINOLOGY.md  TODO.md  TODO.txt  build.rs  configure.ac  leech2.pc.in
.github/: release.yml
.github/actions/cargo-cache/: action.yml
.github/actions/create-pull-request/: action.yml
.github/actions/setup-protoc/: action.yml
.github/scripts/: bump-version.sh  setup-protoc.sh
.github/workflows/: build.yml  deps.yml  format.yml  lint.yml  release.yml  round-trip.yml  rust.yml  test.yml  update.yml  version.yml
example/cfengine/: config.toml.mustache  leech2.cf
include/: improved.h  leech2.h
man/: lch.1  lch.1.in  libleech2.3  libleech2.3.in
proto/: block.proto  cell.proto  delta.proto  entry.proto  host.proto  injected.proto  patch.proto  person.proto  record.proto  state.proto  table.proto  update.proto
src/: block.rs  block_ops.rs  callbacks.rs  cell.rs  config.rs  delta.rs  diff.rs  entry.rs  ffi.rs  head.rs  lib.rs  logger.rs  main.c  main.rs  patch.rs  proto.rs  record.rs  reported.rs  sql.rs  state.rs  stats.rs  storage.rs  table.rs  truncate.rs  update.rs  utils.rs  value.rs  wire.rs
tests/: Makefile  accept_composite_pk.rs  accept_compression_fallback.rs  accept_config.rs  accept_config_change.rs  accept_config_errors.rs  accept_config_include.rs  accept_csv_header.rs  accept_data_format.rs  accept_dry_run.rs  accept_empty_csv.rs  accept_field_reorder.rs  accept_field_types.rs  accept_filters.rs  accept_genesis.rs  accept_hash_prefix.rs  accept_injected_fields.rs  accept_json_config.rs  accept_missing_csv.rs  accept_modify.rs  accept_multi_block.rs  accept_multi_table.rs  accept_no_change.rs  accept_no_compression.rs  accept_patch.rs  accept_recovery.rs  accept_state_dir.rs  accept_state_payload.rs  accept_stats.rs  accept_truncate.rs  accept_truncate_config.rs  accept_truncate_max_age.rs  accept_truncate_max_blocks.rs  accept_truncate_orphan.rs  accept_truncate_reported.rs  config.toml  foo.csv  helloworld.c  main.c  round_trip.rs  (+2 more)
tests/common/: mod.rs
wix/: License.rtf  main.wxs
