[package]
name = "improved-system"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
env_logger = "0.11"
log = "0.4"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10"
toml = "0.8"

[build-dependencies]
prost-build = "0.14"
