[package]
name = "leech2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "lch"
path = "src/main.rs"

[dependencies]
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
env_logger = "0.11"
fs2 = "0.4"
log = "0.4"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
toml = "0.8"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.14"
