[package]
name = "leech2"
version = "1.1.0"
edition = "2024"
authors = ["Lars Erik Wik <lars.erik.wik@northern.tech>"]
description = "Track CSV changes and produce SQL patches via a git-like block chain"
license = "MIT"
repository = "https://github.com/larsewi/leech2"
homepage = "https://github.com/larsewi/leech2"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "lch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
env_logger = "0.11"
log = { version = "0.4", features = ["release_max_level_debug"] }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
terminal_size = "0.4"
toml = "0.8"
zstd = "0.13"

[dev-dependencies]
cc = "1"
tempfile = "3"

[build-dependencies]
prost-build = "0.14"

[package.metadata.deb]
maintainer = "Lars Erik Wik <lars.erik.wik@northern.tech>"
section = "utils"
priority = "optional"
depends = "libc6"
assets = [
    ["target/release/lch", "usr/bin/", "755"],
    ["target/release/libleech2.so", "usr/lib/", "755"],
    ["include/leech2.h", "usr/include/", "644"],
    ["README.md", "usr/share/doc/leech2/", "644"],
    ["man/lch.1", "usr/share/man/man1/", "644"],
    ["man/libleech2.3", "usr/share/man/man3/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/lch", dest = "/usr/bin/lch", mode = "755" },
    { source = "target/release/libleech2.so", dest = "/usr/lib64/libleech2.so", mode = "755" },
    { source = "include/leech2.h", dest = "/usr/include/leech2.h", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/leech2/README.md", mode = "644" },
    { source = "man/lch.1", dest = "/usr/share/man/man1/lch.1", mode = "644" },
    { source = "man/libleech2.3", dest = "/usr/share/man/man3/libleech2.3", mode = "644" },
]

[package.metadata.generate-rpm.requires]
glibc = "*"
